# cad-site-agent

cad-site-agent/: .dockerignore  .gitignore  Dockerfile  README.md  audit_phase5_summary.txt  mcp_server.py  pyproject.toml
cad-site-agent/.claude/: settings.json
cad-site-agent/.claude/hooks/: guard_layer_delete.py
cad-site-agent/.cursor/rules/: cad-cleanup.mdc
cad-site-agent/config/: export_layers.yaml  export_roles.yaml  hatch_rules.yaml  layer_aliases.yaml  layers.json  semantic_taxonomy.yaml  settings.yaml  tolerances.yaml
cad-site-agent/config/presets/: site_plan.yaml
cad-site-agent/deploy/: setup-vps.sh
cad-site-agent/docs/: 00_inventory.md  01_architecture.md  02_cli.md  COORDINATION.md  DEPLOY_VPS.md  SESSION_HANDOFF.md  STATUS_PHASE0_1_2.md  STATUS_PHASE3.md  STATUS_PHASE4.md  STATUS_PHASE4B.md  STATUS_PHASE5.md  STATUS_PHASE6A.md  STATUS_PHASE6B.md  STATUS_PHASE7.md  api.json
cad-site-agent/docs/agent-status/: desktop.md  web.md
cad-site-agent/examples/roman_gardens/: README.md  expected_output.md  run.bat  run.sh
cad-site-agent/reports/analysis/: BDW Eastern Counties - DWH & BH Roman Gardens2.analysis.json  BDW Eastern Counties - DWH & BH Roman Gardens2.analysis.md  BDW_Eastern_Counties_-_DWH_&_BH_Roman_Gardens2_analysis.json  BDW_Eastern_Counties_-_DWH_&_BH_Roman_Gardens2_analysis.md  ST-23-01S Planning Layout.analysis.json  ST-23-01S Planning Layout.analysis.md  ST-23-01S_Planning_Layout_analysis.md  parking_hatched_analysis.json  parking_hatched_analysis.md  st23_analysis.json  (+9 more)
cad-site-agent/scripts/: analyze_all.py  run_analysis.bat  test_gap_close.py
cad-site-agent/tests/: test_analyzer.py  test_boundary_tools.py  test_classifier.py  test_cli.py  test_hatch.py  test_hatch_writer.py  test_process.py  test_routing.py  test_taxonomy.py
(+45 files in other folders)
